# QPM.CLI

./: CLAUDE.md  Cargo.toml  QPM2_VS_QPM1.md  README.md  TESTING.md  build.rs  migrate.ts  qpm.repository.schema.json  qpm.settings.json  qpm.settings.schema.json  qpm.toolchain.schema.json  qpm2.jsonc  qpm2.qpkg.jsonc  qpm2.shared.jsonc  rust-toolchain.toml  tests_dump.ps1  tests_gen.ps1  tests_update.ps1
.devcontainer/: devcontainer.json  onCreate.sh
.github/workflows/: cargo-bleeding-release.yml  cargo-build.yml  cargo-release.yml  pull-request.yml  windows-installer.yml
benches/: resolve.rs
installer/: information.txt  installer.iss
src/: lib.rs  main.rs
src/benches/: mod.rs  resolve.rs
src/benchmark/: resolve.rs
src/commands/: build.rs  cache.rs  clear.rs  collapse.rs  dependency.rs  doctor.rs  download.rs  genschema.rs  install.rs  migrate.rs  mod.rs  ndk.rs  publish.rs  qpkg.rs  restore.rs  scripts.rs  templatr.rs  version.rs
src/commands/config/: cache.rs  mod.rs  ndkpath.rs  publish.rs  symlink.rs  timeout.rs  token.rs
src/commands/list/: mod.rs  packages.rs  versions.rs
src/commands/package/: create.rs  edit.rs  edit_extra.rs  format.rs  mod.rs
src/commands/publish/: mod.rs
src/commands/qmod/: build.rs  create.rs  edit.rs  manifest.rs  mod.rs  zip.rs
src/models/: android_repo.rs  backend.rs  config.rs  dependency.rs  extra.rs  mod.rs  mod_json.rs  package.rs  package_dependeny.rs  package_files.rs  package_metadata.rs  qpackages.rs  qpkg.rs  qpkg_file.rs  schemas.rs  toolchain.rs
src/network/: agent.rs  agent_common.rs  github.rs  mod.rs  reqwest_agent.rs  ureq_agent.rs
src/repository/: file.rs  local.rs  memcached.rs  mod.rs  multi.rs  qpackages.rs
src/resolver/: dependency.rs  mod.rs  semver.rs
src/services/: android.rs  git.rs  github.rs  mod.rs  ndk.rs  network.rs  pubgrub.rs  publish.rs  qpm_version.rs  restore.rs  semver.rs
src/terminal/: colors.rs
src/tests/: commands.rs  mod.rs  resolve.rs
src/tests/commands/: dependency.rs  download.rs  mod.rs  ndk.rs  qmod.rs  restore.rs
src/tests/framework/: common.rs
src/tests/mocks/: repo.rs
src/tests/network/: mod.rs  qpackages.rs
src/utils/: android.rs  cmake.rs  fs.rs  git.rs  json.rs  mod.rs  ndk.rs  progress.rs  toggle.rs
test_cmd/: .gitignore  dep_add.toml  dep_remove.toml  dep_update.toml  ndk_download.toml  ndk_pin.stdout  ndk_pin.toml  ndk_resolve.toml  qmod_manifest.toml  qmod_zip.toml  remove_dep.toml  restore.toml  update_dep.toml
test_cmd/add_dep.in/: qpm.settings.json
test_cmd/dep_add.in/: qpm.json
test_cmd/dep_add.out/: qpm.json
test_cmd/dep_remove.in/: qpm.json
test_cmd/dep_remove.out/: qpm.json
test_cmd/dep_update.in/: qpm.json  qpm.settings.json
test_cmd/dep_update.out/: qpm.json
test_cmd/download_adb.in/: qpm.json
test_cmd/ndk_pin.in/: qpm.json
test_cmd/ndk_pin.out/: qpm.json
test_cmd/ndk_resolve.in/: qpm.json
test_cmd/qmod_manifest.out/: mod.json
test_cmd/qmod_zip.in/: qpm.json  qpm.shared.json
test_cmd/qmod_zip.out/: mod.template.json  qmod_made.qmod
test_cmd/restore.in/: qpm.json
test_cmd/restore.out/: extern.cmake  qpm.json  qpm.settings.json  qpm.shared.json  qpm_defines.cmake
test_package/: capstone.qpkg  qpm.json  qpm.settings.json  qpm2.json  qpm2.shared.json  toolchain.json
tests/: TODO  android.rs  commands.rs  file_repository.rs  git.rs  github.rs  migrate.rs  mod_json.rs  ndk.rs  network_qpackages.rs  package_files.rs  publish.rs  qpkg_management.rs  qpm_version.rs  repository_multi.rs  resolve.rs  restore.rs  semver.rs
tests/commands/: common.rs  dependency.rs  download.rs  ndk.rs  qmod.rs  restore.rs
tests/mocks/: mock_repository.rs  mod.rs  repo.rs
