[package]
name = "qpm_cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/QuestPackageManager/QPM.CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rename binary
[[bin]]
name = "qpm"
path = "src/main.rs"

[lib]
required-features = []


[features]
default = ["templatr", "network_test", "cli", "gitoxide"]
templatr = ["dep:templatr"]
cli = ["dep:clap", "dep:clap_complete", "dep:vergen", "dep:pbr"]
gitoxide = ["dep:gix"]
network_test = []

[build-dependencies]
vergen = { version = "8", features = [
    "build",
    "git",
    "gitcl",
], optional = true }
# if you wish to disable certain features
color-eyre = { version = "0.6", default-features = false }

[dev-dependencies]
trycmd = { version = "0.15" }

[dependencies]
#qpm
qpm_package = { git = "https://github.com/QuestPackageManager/QPM.Package.git" }
qpm_qmod = { git = "https://github.com/QuestPackageManager/QPM.Qmod.git" }
qpm_arg_tokenizer = { git = "https://github.com/QuestPackageManager/QPM.arg_tokenizer.git" }
templatr = { git = "https://github.com/QuestPackageManager/templatr.git", optional = true }

# No need for tracing support
color-eyre = { version = "0.6", default-features = false }
# progress bar
pbr = { version = "*", optional = true } #{ git = "https://github.com/a8m/pb.git" }

bytes = "*"
reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "gzip",
    "deflate",
    "brotli",
    "rustls-tls",
], default-features = false }

clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
semver = { version = "1.0", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
pubgrub = "0.2"
owo-colors = "4"
dirs = "5.0.0"
keyring = "3"

gix = { version = "*", features = [
    "command",
    "attributes",
    "progress-tree",
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
], optional = true, default-features = false}

# Use PR with symlink fix for Unix systems.
zip = "2"

walkdir = "2"
symlink = "0.1.0"
fs_extra = "1.2"
itertools = "0.13"
schemars = { version = "0.8.21", features = ["semver"] }

[target.aarch64-apple-darwin.dependencies]
# Allow cross compiles
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
[target.x86_64-apple-darwin.dependencies]
# Statically link openssl
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"


[profile.dev.package.backtrace]
opt-level = 3
