[package]
name = "qpm_cli"
version = "2.0.0"
edition = "2024"
repository = "https://github.com/QuestPackageManager/QPM.CLI"

rust-version = "1.90"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rename binary
[[bin]]
name = "qpm2"
path = "src/main.rs"

[lib]
required-features = []


[features]
default = ["templatr", "network_test", "cli", "gitoxide", "quest_emu"]
templatr = ["dep:templatr"]
cli = ["dep:clap", "dep:clap_complete", "dep:vergen", "dep:indicatif"]
quest_emu = ["dep:quest_emu"]
network_test = []
gitoxide = ["dep:gix"]

[build-dependencies]
vergen = { version = "8", features = [
    "build",
    "git",
    "gitcl",
], optional = true }
# if you wish to disable certain features
color-eyre = { version = "0.6", default-features = false }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1.0"
tempfile = "3.23"
assert_fs = "1.1.0"
fs_extra = "1.3.0"
walkdir = "2.4.0"
color-eyre = "0.6"

[dependencies]
#qpm
qpm_package = { git = "https://github.com/QuestPackageManager/QPM.Package.git", branch = "qpm2" }
qpm_qmod = { git = "https://github.com/QuestPackageManager/QPM.Qmod.git" }
qpm_arg_tokenizer = { git = "https://github.com/QuestPackageManager/QPM.arg_tokenizer.git" }
templatr = { git = "https://github.com/QuestPackageManager/templatr.git", optional = true }
quest_emu = { git = "https://github.com/Fernthedev/quest_emu_setup.git", optional = true }

pathdiff = "0.2"

# No need for tracing support
color-eyre = { version = "0.6", default-features = false }

bytes = "*"
ureq = { version = "3", features = [
    "rustls",
    "json",
    "gzip",
], default-features = false }

gix = { version = "*", features = [

], optional = true, default-features = false }

clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.7"
semver = { version = "1.0", features = ["serde"] }
cursed-semver-parser = { git = "https://github.com/raftario/cursed-semver-parser.git", features = [
    "serde",
] }
pubgrub = "0.3"
owo-colors = "4"
dirs = "6.0.0"
keyring = "3"

zip = { version = "6", default-features = false, features = [
    "zstd",
    "nt-time",
    "deflate",
    "deflate-flate2",
    "deflate-zopfli",
    "deflate64",
    "lzma",
    "bzip2",
] }

walkdir = "2"
symlink = "0.1.0"
fs_extra = "1.2"
itertools = "0.14"
schemars = { version = "0.8", features = ["semver"] }
sha2 = "0.10.9"
hex = "0.4.3"
indicatif = { version = "0.18", optional = true }

# [target.aarch64-apple-darwin.dependencies]
# # Allow cross compiles
# openssl = { version = "0.10", features = ["vendored"] }
# openssl-sys = { version = "0.9", features = ["vendored"] }
# [target.x86_64-apple-darwin.dependencies]
# # Statically link openssl
# openssl = { version = "0.10", features = ["vendored"] }
# openssl-sys = { version = "0.9", features = ["vendored"] }

# [target.x86_64-unknown-linux-musl.dependencies]
# # Statically link openssl
# openssl = { version = "0.10", features = ["vendored"] }
# openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
strip = "symbols"


[profile.dev.package.backtrace]
opt-level = 3
